# ADOL-C

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  Makefile.win  README  README.md  TODO  _2home_2runner_2work_2ADOL-C_2ADOL-C_2ADOL-C_2include_2adolc_2adolcerror_8h-example.html  acinclude.m4  aclocal.m4  adalloc_8h_source.html  adolc-config.cmake.in  adolc.pc.in  adolc.spec  adolc.spec.in  adolc_8h_source.html  adolc__openmp_8h_source.html  adolc__sparse_8h_source.html  adolcerror_8h_source.html  adolcexport_8h_source.html  adolclib.pc.in  adoublecuda_8h_source.html  adtb__types_8h_source.html  adtl_8h_source.html  adtl__hov_8h_source.html  adtl__indo_8h_source.html  adutils_8h_source.html  adutilsc_8h_source.html  advector_8h_source.html  annotated.html  (+257 more)
ADOL-C/: CMakeLists.txt  Makefile.am  Makefile.in  adolc
ADOL-C/ampi/: Makefile.am  ampiTraverseStub.c  ampisupport.cpp  ampisupportAdolc.cpp  ampisupportAdolc.h
ADOL-C/boost-test/: CMakeLists.txt  README  README.md  adouble.cpp  c_interface_tape_loc.cpp  const.h  main.cpp  matrixView.cpp  openmp.cpp  pdouble.cpp  traceCompositeTests.cpp  traceExtDiff.cpp  traceFixedPointScalarTests.cpp  traceOperatorScalar.cpp  traceOperatorVector.cpp  traceSecOrderScalar.cpp  traceSecOrderVector.cpp  tracelessADValue.cpp  tracelessCompositeTests.cpp  tracelessOperatorScalar.cpp  tracelessOperatorVector.cpp  uni5_for.cpp
ADOL-C/boost-test/ho_rev/: hos_ov_reverse.cpp
ADOL-C/boost-test/integration_tests/: abs_normal.cpp  abs_normal_struct.cpp  accumulate.cpp  big_example.cpp  checkpointing.cpp  determinante.cpp  external_fct.cpp  external_fct_v2.cpp  powerexam.cpp  speelpenning.cpp  tensor_eval.cpp
ADOL-C/boost-test/sparse/: sparse_abs_normal.cpp  sparse_hessian.cpp  sparse_hessian_c.cpp  sparse_jacobian.cpp  sparse_jacobian_c.cpp
ADOL-C/boost-test/uni5_for/: hov_forward.cpp  hov_wk_forward.cpp  uni5_for.cpp
ADOL-C/boost-test/valuetape/: globaltapevarscl.cpp  tapeinfos.cpp
ADOL-C/c_interface/: ADOLCTBInterface.cpp  ADOLCTBInterface.h  ADOLCTLInterface.h  ADOLC_TB_interface.cpp  ADOLC_TB_interface.h  ADOLC_TL_interface.cpp  ADOLC_TL_interface.h  CMakeLists.txt  array_handler.cpp  array_handler.h  driver_interface.cpp  driver_interface.h
ADOL-C/doc/: .gitignore  absdrivers.tex  adolc-20.ps  adolc-20.tex  adolc-manual.bib  adolc-manual.ps  adolc-manual.tex  short_ref.ps  short_ref.tex  tap_point.eps  tapeadv.eps  tapebasic.eps  version.tex  version.tex.in
ADOL-C/doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Mainpage.md  Topics.md  differentiating_cpp_code.md  doxyfile.in  drivers.md  mainpage.md  tape_interface.dox  topics.md
ADOL-C/examples/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  Readme_VC++.txt  abs_normal.cpp  abs_normal_struct.cpp  adolc_examples.sln  detexam.cpp  detexam.vcxproj  liborgpu.cpp  luexam.cpp  odexam.cpp  odexam.vcxproj  powexam.cpp  powexam.vcxproj  speelpenning.cpp  speelpenning.vcxproj  tapeless_higher_order.cpp  tapeless_scalar.cpp  tapeless_scalar.vcxproj  tapeless_vector.cpp  tapeless_vector.vcxproj  traceless_higher_order.cpp  traceless_scalar.cpp  traceless_vector.cpp  traceless_vector_indo.cpp  winpackage.sh
ADOL-C/examples/additional_examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.win  benchmark.cpp
ADOL-C/include/: CMakeLists.txt  Makefile.am  Makefile.in
ADOL-C/include/adolc/: CMakeLists.txt  Makefile.am  Makefile.in  ad_types.h  adalloc.h  adolc.h  adolc_fatalerror.h  adolc_mpi.h  adolc_openmp.h  adolc_settings.h  adolc_settings.h.in  adolcerror.h  adolcexport.h  adouble.h  adoublecuda.h  adtb_types.h  adtl.h  adtl_hov.h  adtl_indo.h  adutils.h  adutilsc.h  advalue.h  advector.h  buffer_temp.h  checkpointing.h  checkpointing_p.h  common.h  convolut.h  dvlparms.h  edfclasses.h  externfcts.h  externfcts2.h  externfcts_p.h  fixpoint.h  fortutils.h  interfaces.h  interfaces_mpi.h  medipacksupport.h  oplate.h  param.h  (+6 more)
ADOL-C/src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.win  adalloc.c  adalloc.cpp  adalloc.h  adolc.h  adolc_mpi.cpp  adolc_mpi.h  adolc_openmp.h  adolc_sparse.h  adolcerror.cpp  adouble.cpp  adouble.h  adouble_tl.cpp  adouble_tl_hov.cpp  adouble_tl_indo.cpp  adoublecuda.h  adtl.h  adtl_mpi.cpp  adtl_mpi.h  adutils.h  adutilsc.h  advector.cpp  advector.h  ampisupport.cpp  ampisupportAdolc.cpp  ampisupportAdolc.h  buffer_temp.h  checkpointing.cpp  checkpointing.h  checkpointing_p.h  common.h  config.h.in  convolut.c  convolut.cpp  convolut.h  csod_forward_s.c  (+133 more)
ADOL-C/src/drivers/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.win  (+19 more)
ADOL-C/swig/: 0001-R-Added-typemaps-for-handling-matrices-as-double.patch  0001-R-add-typemap-argout-and-fix-code-generation.patch  0002-R-Added-typemaps-for-handling-matrices-as-double.patch  Makefile.am  Makefile.in  adolc-R-manual-changes.diff  adolc-numpy-drv.i  adolc-numpy-for.i  adolc-numpy-rev.i  adolc-oct-drv.i  adolc-octave.i  adolc-python.i  adolc-r.i  adolc_all_in.h  adolc_all_in.hpp  adubswigfuncs.h  adubswigfuncs.hpp  init_adolc.R  matrixmemory.hpp  octave-types.i  pydirectors.hpp  pyedfclasses.hpp  setup.py  swigprocess.py
ADOL-C/test/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  ascii2tape.cpp  callback.cpp  fminmax.cpp  parallel.cpp  powexam.cpp  run_tests  speelpenning.cpp  subtracetest.cpp  tape.txt
adolc/drivers/: Makefile.am  Makefile.in  drivers.c  drivers.h  driversf.c  odedrivers.c  odedrivers.h  odedriversf.c  taylor.c  taylor.h
adolc/sparse/: Makefile.am  Makefile.in  Makefile.win  sparse_fo_rev.cpp  sparse_fo_rev.h  sparsedrivers.cpp  sparsedrivers.h
doc/: Makefile.am  Makefile.in  adolc-20.ps  adolc-20.tex  short_ref.ps  short_ref.tex
examples/: Makefile.am  Makefile.in  Makefile.win  detexam.cpp  odexam.cpp  powexam.cpp  speelpenning.cpp  tapeless_scalar.cpp  tapeless_vector.cpp
examples/additional_examples/: Makefile.am  Makefile.in
trunk/: Makefile.am  README  TODO  aclocal.m4  adolc.spec  configure  configure.ac
(+658 files in other folders)
